# firefish-protocol

./: .gitignore  644D14E75E6EAD64.asc  CONTRIBUTING.md  Cargo.toml  Dockerfile.nix  LICENSE.md  README.md  SECURITY.md  docker-build-and-verify.sh  flake.nix  test.sh  test_upgrade.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue_template.yml
.github/workflows/: cli.yml  lib.yml  nix.yml  upgrade.yml
borrower-wasm/: Cargo.toml
borrower-wasm/src/: lib.rs
cli/: Cargo.toml
cli/src/: main.rs
contrib/wasm-commit/: Cargo.toml  README.md
contrib/wasm-commit/src/: main.rs
legal/: ICLA.md
src/: lib.rs  test_macros.rs
src/contract/: constants.rs  deserialize.rs  escrow.rs  mod.rs  offer.rs  participant.rs  prefund.rs  primitives.rs  pub_keys.rs
src/contract/participant/: borrower.rs  ted.rs  ted_o.rs  ted_p.rs
